Bug 780553: Fix error caused by merge of previous patch; r=anant