dom/media/MediaManager.cpp
@@ -183,13 +183,15 @@ public:
   {
     mManager = MediaManager::Get();
 
-    // It is an error is audio or video are requested along with picture.
+    // It is an error if audio or video are requested along with picture.
     if (mPicture && (mAudio || mVideo)) {
       NS_DispatchToMainThread(new ErrorCallbackRunnable(
         mError, NS_LITERAL_STRING("NOT_SUPPORTED_ERR"), mWindowID
       ));
       return NS_OK;
-    } else {
+    }
+
+    if (mPicture) {
       SendPicture();
       return NS_OK;
     }
